// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has a start and end adornment 1`] = `
<div
  className="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-adornedStart MuiInputBase-adornedEnd css-spqcwk-MuiInputBase-root-MuiInput-root"
  onClick={[Function]}
>
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
    color="transparent"
    focusable="false"
    viewBox="0 0 20 20"
  >
    <rect
      fillOpacity={0}
      height="12"
      stroke="#171F46"
      width="16"
      x="2"
      y="4"
    />
    <path
      d="M10 11.5L9.65803 11.8648C9.85036 12.0451 10.1496 12.0451 10.342 11.8648L10 11.5ZM1.65803 4.36477L9.65803 11.8648L10.342 11.1352L2.34197 3.63523L1.65803 4.36477ZM10.342 11.8648L18.342 4.36477L17.658 3.63523L9.65803 11.1352L10.342 11.8648Z"
      fill="#171F46"
      strokeOpacity={0}
    />
  </svg>
  <input
    aria-invalid={false}
    className="MuiInput-input MuiInputBase-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd css-1x51dt5-MuiInputBase-input-MuiInput-input"
    disabled={false}
    onAnimationStart={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
    color="transparent"
    focusable="false"
    viewBox="0 0 20 20"
  >
    <rect
      fillOpacity={0}
      height="12"
      stroke="#171F46"
      width="16"
      x="2"
      y="4"
    />
    <path
      d="M10 11.5L9.65803 11.8648C9.85036 12.0451 10.1496 12.0451 10.342 11.8648L10 11.5ZM1.65803 4.36477L9.65803 11.8648L10.342 11.1352L2.34197 3.63523L1.65803 4.36477ZM10.342 11.8648L18.342 4.36477L17.658 3.63523L9.65803 11.1352L10.342 11.8648Z"
      fill="#171F46"
      strokeOpacity={0}
    />
  </svg>
</div>
`;

exports[`has an input element added 1`] = `
<div
  className="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary css-spqcwk-MuiInputBase-root-MuiInput-root"
  onClick={[Function]}
>
  <input
    aria-invalid={false}
    className="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
    disabled={false}
    maxLength={20}
    onAnimationStart={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
</div>
`;

exports[`has error state 1`] = `
<div
  className="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary Mui-error css-spqcwk-MuiInputBase-root-MuiInput-root"
  onClick={[Function]}
>
  <input
    aria-invalid={true}
    className="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
    disabled={false}
    onAnimationStart={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
</div>
`;

exports[`is disabled 1`] = `
<div
  className="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary Mui-disabled css-spqcwk-MuiInputBase-root-MuiInput-root"
  onClick={[Function]}
>
  <input
    aria-invalid={false}
    className="MuiInput-input MuiInputBase-input Mui-disabled css-1x51dt5-MuiInputBase-input-MuiInput-input"
    disabled={true}
    onAnimationStart={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
</div>
`;

exports[`is full-width 1`] = `
<div
  className="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-1s97tdc-MuiInputBase-root-MuiInput-root"
  onClick={[Function]}
>
  <input
    aria-invalid={false}
    className="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
    disabled={false}
    onAnimationStart={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
</div>
`;

exports[`is multiline, has 5 rows and 6 max rows 1`] = `
<div
  className="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary css-spqcwk-MuiInputBase-root-MuiInput-root"
  onClick={[Function]}
  rowsMax={6}
>
  <input
    aria-invalid={false}
    className="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
    disabled={false}
    onAnimationStart={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    rows={5}
    type="text"
  />
</div>
`;

exports[`is readOnly 1`] = `
<div
  className="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary css-spqcwk-MuiInputBase-root-MuiInput-root"
  onClick={[Function]}
>
  <input
    aria-invalid={false}
    className="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
    disabled={false}
    onAnimationStart={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    readOnly={true}
    type="text"
  />
</div>
`;

exports[`is required 1`] = `
<div
  className="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary css-spqcwk-MuiInputBase-root-MuiInput-root"
  onClick={[Function]}
  required={true}
>
  <input
    aria-invalid={false}
    className="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
    disabled={false}
    onAnimationStart={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    required={true}
    type="text"
  />
</div>
`;

exports[`renders correctly props object 1`] = `
<div
  className="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary test css-spqcwk-MuiInputBase-root-MuiInput-root"
  onClick={[Function]}
>
  <input
    aria-invalid={false}
    className="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
    disabled={false}
    id="id"
    maxLength={20}
    name="name"
    onAnimationStart={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="placeholder"
    type="text"
    value="rubiwin"
  />
</div>
`;
